@@ -2,6 +2,7 @@ package io.sentry.event;
 
 
 import java.io.Serializable;
+import java.util.Map;
 
 /**
  * An object that represents a user. Typically used to represent
@@ -14,6 +15,24 @@ public class User implements Serializable {
     private final String username;
     private final String ipAddress;
     private final String email;
+    private final Map<String, Object> data;
+
+    /**
+     * Create an immutable User object.
+     *
+     * @param id        String (optional)
+     * @param username  String (optional)
+     * @param ipAddress String (optional)
+     * @param email     String (optional)
+     * @param data      Extra user data (optional)
+     */
+    public User(String id, String username, String ipAddress, String email, Map<String, Object> data) {
+        this.id = id;
+        this.username = username;
+        this.ipAddress = ipAddress;
+        this.email = email;
+        this.data = data;
+    }
 
     /**
      * Create an immutable User object.
@@ -24,10 +43,7 @@ public class User implements Serializable {
      * @param email     String (optional)
      */
     public User(String id, String username, String ipAddress, String email) {
-        this.id = id;
-        this.username = username;
-        this.ipAddress = ipAddress;
-        this.email = email;
+        this(id, username, ipAddress, email, null);
     }
 
     public String getId() {
@@ -44,6 +60,10 @@ public class User implements Serializable {
 
     public String getEmail() {
         return email;
+    }
+
+    public Map<String, Object> getData() {
+        return data;
     }
 
 }
