@@ -2,5 +2,10 @@
     "id": "970e9df6-6e0b-4a27-b2ee-0faf0f368354",
     "username": "3eaa555a-e813-4778-9852-7c1880bf0fd7",
     "email": "9bcade34-a58c-4616-9de7-bc8b456c96de",
-    "ip_address": "9a1a658b-6f74-43ae-9e45-0f89f4c5fcb4"
+    "ip_address": "9a1a658b-6f74-43ae-9e45-0f89f4c5fcb4",
+    "data": {
+        "foo": "bar",
+        "baz": 2,
+        "qux": null
+    }
 }
